--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.2.0",
   "description": "",
   "main": "index.js",
- "scripts": {
+  "scripts": {
     "test": "cucumber-js tests/features  --import tests/features/support --import tests/features/step-definitions --world-parameters {\\\"browserName\\\":\\\"chrome\\\"} --format json:tests/results/chrome.json --format @qavajs/console-formatter --fail-fast",
     "start": "node index.js",
     "report": "node ./generateReport",
@@ -14,15 +14,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@cucumber/cucumber": "^11.0.1",
     "chai": "^5.1.1",
-    "chromedriver": "^130.0.0",
-    "cucumber-html-reporter": "^6.0.0",
+    "chromedriver": "^130.0.1",
     "express": "^4.21.2",
     "open": "^10.1.0",
     "selenium-webdriver": "^4.25.0"
   },
   "devDependencies": {
-    "@qavajs/console-formatter": "^0.8.0"
+    "@cucumber/cucumber": "^11.1.1",
+    "@qavajs/console-formatter": "^0.8.0",
+    "cucumber-html-reporter": "^6.0.0"
   }
 }
